--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,8 +49,8 @@
         android:layout_alignRight="@+id/editTextUsername"
         android:layout_alignEnd="@+id/editTextUsername"
         android:hint="Password"
-        android:layout_alignLeft="@+id/textViewForgotPassword"
-        android:layout_alignStart="@+id/textViewForgotPassword" />
+        android:layout_alignLeft="@+id/editTextUsername"
+        android:layout_alignStart="@+id/editTextUsername" />
 
     <Button
         android:layout_width="wrap_content"
@@ -72,13 +72,14 @@
         android:paddingTop="0dp"
         android:layout_below="@+id/buttonLogin"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="15dp"
+        android:onClick="callSignUp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Esceu sua senha? Clique aqui"
+        android:text="Esqueceu sua senha? Clique aqui"
         android:id="@+id/textViewForgotPassword"
         android:paddingTop="0dp"
         android:layout_below="@+id/textViewSignUp"
