--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,7 +17,9 @@
         android:id="@+id/button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="146dp" />
+        android:layout_marginBottom="146dp"
+        android:onClick="cadastrar"
+        />
 
     <EditText
         android:layout_width="wrap_content"
