--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Bem vindo ao Learn IT"
+        android:text="@string/bem_vindo"
         android:id="@+id/textView"
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editTextUsername"
-        android:hint="Login"
+        android:hint="@string/login"
         android:layout_below="@+id/textView"
         android:layout_alignLeft="@+id/textView"
         android:layout_alignStart="@+id/textView"
@@ -48,14 +48,14 @@
         android:layout_below="@+id/editTextUsername"
         android:layout_alignRight="@+id/editTextUsername"
         android:layout_alignEnd="@+id/editTextUsername"
-        android:hint="Password"
+        android:hint="@string/Password"
         android:layout_alignLeft="@+id/editTextUsername"
         android:layout_alignStart="@+id/editTextUsername" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Entrar"
+        android:text="@string/Entrar"
         android:id="@+id/buttonLogin"
         android:background="#7bc8f3"
         android:textColor="#ffffff"
@@ -68,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Novo aqui? Cadastre-se"
+        android:text="@string/cadastrar"
         android:id="@+id/textViewSignUp"
         android:paddingTop="0dp"
         android:layout_below="@+id/buttonLogin"
@@ -80,7 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Esqueceu sua senha? Clique aqui"
+        android:text="@string/esqueceu"
         android:id="@+id/textViewForgotPassword"
         android:paddingTop="0dp"
         android:layout_below="@+id/textViewSignUp"
