--- a/app/src/main/res/layout/activity_tela__inicial.xml
+++ b/app/src/main/res/layout/activity_tela__inicial.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="ufrpe.edu.learnit.Tela_Inicial">
+    tools:context="ufrpe.edu.learnit.gui.Tela_Inicial">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,8 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_tela__inicial" />
-
     <TextView
         android:text="Home"
         android:layout_width="wrap_content"
@@ -32,6 +30,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="135dp"
         android:layout_centerHorizontal="true" />
+
+    <include layout="@layout/content_tela__inicial" />
 
 </android.support.design.widget.CoordinatorLayout>
 
