--- a/app/src/main/res/layout/activity_tela_de__interesses.xml
+++ b/app/src/main/res/layout/activity_tela_de__interesses.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="ufrpe.edu.learnit.Tela_de_Interesses">
+    tools:context="ufrpe.edu.learnit.gui.Tela_de_Interesses">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
