--- a/app/src/main/res/layout/content_tela__inicial.xml
+++ b/app/src/main/res/layout/content_tela__inicial.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="ufrpe.edu.learnit.Tela_Inicial"
+    tools:context="ufrpe.edu.learnit.gui.Tela_Inicial"
     tools:showIn="@layout/activity_tela__inicial">
 
 </RelativeLayout>
