--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,7 +74,7 @@
         android:layout_below="@+id/buttonLogin"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
-        android:onClick="callSignUp"/>
+        android:onClick="chamarTelaInteresses"/>
 
     <TextView
         android:layout_width="wrap_content"
