--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_register"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ufrpe.edu.learnit.gui.RegisterActivity">
+    tools:context=".usuario.gui.RegisterActivity">
 
     <EditText
         android:layout_width="wrap_content"
