--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="ufrpe.edu.learnit.MainActivity">
+    tools:context="ufrpe.edu.learnit.usuario.gui.HomeActivity">
 
 
     <android.support.v7.widget.Toolbar
@@ -14,7 +14,8 @@
         android:layout_height="?attr/actionBarSize"
         android:background="#7bc8f3"
         app:popupTheme="@style/AppTheme.PopupOverlay" />
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <ScrollView
         android:id="@+id/ScrollView01"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
