--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -47,6 +47,21 @@
                 android:layout_alignParentEnd="true"
                 android:onClick="fazerLogoff"/>
 
-        </RelativeLayout>
+        <Button
+            android:text="MEU PERFIL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/button2"
+            android:layout_marginBottom="78dp"
+            android:id="@+id/button3"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="#7bc8f3"
+            android:textColor="@android:color/background_light"
+            android:onClick="chamarPerfil"/>
+
+    </RelativeLayout>
     </ScrollView>
 
