--- a/app/src/main/res/layout/activity_interesses.xml
+++ b/app/src/main/res/layout/activity_interesses.xml
@@ -84,6 +84,14 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
 
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/spinner"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="37dp"
+            android:id="@+id/spinner2" />
 
 
     </RelativeLayout>
