--- a/app/src/main/res/layout/activity_interesses.xml
+++ b/app/src/main/res/layout/activity_interesses.xml
@@ -8,10 +8,10 @@
 
     <RelativeLayout
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/activity_register"
+        android:id="@+id/activity_interesses"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".usuario.gui.RegisterActivity">
+        tools:context=".usuario.gui.InteressesActivity">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -40,19 +40,7 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:text="Nome"
-                android:ems="10"
-                android:layout_marginBottom="39dp"
-                android:id="@+id/editText5"
-                android:layout_alignBottom="@+id/textInputLayout"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
-
-            <EditText
+        <EditText
                 android:layout_width="match_parent"
                 android:layout_height="149dp"
                 android:hint="Digite aqui a sua bio"
@@ -60,38 +48,17 @@
                 android:layout_marginTop="63dp"
                 android:layout_alignTop="@+id/editText5"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
-
-
-            <TextView
-                android:text="Selecionar interesses:"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView3"
-                android:layout_marginTop="20dp"
-                android:layout_below="@+id/editText4"
-                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_alignRight="@+id/editText5"
-                android:layout_alignEnd="@+id/editText5" />
+            android:layout_alignBottom="@+id/textInputLayout" />
 
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="19dp"
-                android:id="@+id/spinner"
-                android:layout_below="@+id/textView3"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
 
         <Spinner
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/spinner"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="37dp"
-            android:id="@+id/spinner2" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/spinner"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:id="@+id/spinner2" />
 
         <Button
             android:text="Confirmar"
@@ -100,14 +67,42 @@
             android:id="@+id/button3"
             android:background="#7bc8f3"
             android:textColor="@android:color/background_light"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@id/spinner2"
+            android:layout_marginTop="220dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:onClick="chamarHome"/>
 
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text="Nome"
+            android:ems="10"
+            android:id="@+id/editText5"
+            android:layout_below="@+id/toolbar"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
+            android:id="@+id/spinner"
+            android:layout_below="@+id/textView3"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="Selecionar interesses:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView3"
+            android:layout_below="@+id/textInputLayout"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
 </ScrollView>
 
