--- a/app/src/main/res/layout/activity_interesses.xml
+++ b/app/src/main/res/layout/activity_interesses.xml
@@ -73,13 +73,13 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:onClick="chamarHome"/>
+            android:onClick="confirmar"/>
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:text="Nome"
+            android:hint="Nome"
             android:ems="10"
             android:id="@+id/editText5"
             android:layout_below="@+id/toolbar"
